# ayafileio

./: .gitignore  CHAMGES.md  CHANGES.md  CHANGES_CN.md  CMakeLists.txt  MAIFEST.in  MANIFEST.in  README.md  README_CN.md  README_EN.md  build.bat  build_it.py  fair_comparison_report.html  m.py  pyproject.toml  run_benchmark.py  run_betchmark.py  setup.py  t.py  test_base.py  test_loguru.py  test_speed.py  test_wrap_fd.py
.github/workflow/: release.yml
.github/workflows/: build_wheel_ci.yml  release.yml  test.yml
aiowinfile/: __init__.py
ayafileio/: __init__.py  _async_file.py  _cleanup.py  _compat.py  _config.py  _open.py  _wrap.py  types.py  util.py
src/: bindings.cpp  config.hpp  debug.hpp  debug_log.hpp  file_handle.cpp  file_handle.hpp  globals.hpp  handle_pool.cpp  io_backend.cpp  io_backend.hpp  io_request.hpp  loop_handle.cpp  pool.cpp  pool.hpp  uring_globals.cpp  uring_pool.hpp
src/backends/: io_uring_backend.cpp  io_uring_backend.hpp  macos_gcd_backend.cpp  macos_gcd_backend.hpp  thread_io_backend.cpp  thread_io_backend.hpp  windows_io_backend.cpp  windows_io_backend.hpp
test/: benchmark.py  config.py  reporter.py
