[build-system]
requires = ["setuptools>=61", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "ayafileio"
version = "0.1.0"
description = "Cross-platform async file API for Python. Blazing fast like Shameimaru Aya."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Patchouli-CN", email = "3072252442@qq.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/Patchouli-CN/ayafileio"
Repository = "https://github.com/Patchouli-CN/ayafileio.git"

[tool.setuptools]
packages = ["ayafileio"]
package-dir = {"" = "."}