[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "nanobind>=2.12.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "ayafileio"
version = "1.0.5"
description = "Cross-platform async file API for Python. Blazing fast like Shameimaru Aya."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Patchouli-CN", email = "3072252442@qq.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    
    "Topic :: System :: Filesystems",  
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    
    "Framework :: AsyncIO",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/Patchouli-CN/ayafileio"
Repository = "https://github.com/Patchouli-CN/ayafileio.git"

[tool.scikit-build]
cmake.minimum-version = "3.15"
build-dir = "build/{wheel_tag}"
cmake.args = [
    "-DCMAKE_CXX_STANDARD=17",
    "-DCMAKE_BUILD_TYPE=Release",
]

# 关键：删除或注释掉 [tool.scikit-build.wheel] 部分
# 让系统为每个 Python 版本生成原生 wheel
# [tool.scikit-build.wheel]
# py-api = "cp310"

[tool.setuptools]
packages = ["ayafileio"]
package-dir = {"" = "."}